<resources>
    <string name="app_name">declassify</string>

    <!--Shared Preferences-->
    <string name="USER_ID">USER_ID</string>
    <string name="PASSWORD">PASSWORD</string>
    <string name="SCHOOL_ID">SCHOOL_ID</string>

    <!--Navigation Drawer-->
    <string-array name="nav_drawer_array">
        <item>Home</item>
        <item>My Reviews</item>
        <item>Professors</item>
        <item>Search</item>
        <item>Logout</item>
    </string-array>

    <string-array name="nav_drawer_icon_array">
        <item>{fa-home}</item>
        <item>{fa-pencil}</item>
        <item>{fa-graduation-cap}</item>
        <item>{fa-search}</item>
        <item>{fa-sign-out}</item>
    </string-array>

    <string-array name="search_array">
        <item>Classes</item>
        <item>Subjects</item>
    </string-array>

    <string-array name="search_option_array">
        <item>Show Reviews</item>
        <item>Show Classes</item>
    </string-array>

    <string-array name="report_option_array">
        <item>Advertisement</item>
        <item>Harassment</item>
        <item>Inappropriate</item>
        <item>Spam</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Generic -->
    <string name="home">Home</string>
    <string name="action_settings">Settings</string>
    <string name="action_report">Report</string>
    <string name="action_share">Share</string>
    <string name="title_activity_login">Sign in</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="server_error">Server is unable to process request. Please try again later.</string>
    <string name="too_many_req">Too many requests made. Try again later.</string>
    <string name="unable_to_request">Unable to make a request. Please contact the devs if the issue persists.</string>
    <string name="loading">Loading...</string>
    <string name="verifying">Verifying account...</string>
    <string name="next">Next</string>
    <string name="search">Search</string>
    <string name="classes">Classes</string>
    <string name="subjects">Subjects</string>
    <string name="school">School</string>

    <!-- Report -->
    <string name="report">Report this review</string>
    <string name="review_reported">Your report has been received!</string>

    <!--Main Activity-->
    <string name="verify_success">Successfully verified your account!</string>
    <string name="data_doesnt_exist">Data doesn\'t exist.</string>
    <string name="error_getting_data">Unable to fetch data.</string>
    <string name="fetch_data_again"> Data not available.\n Press here to try again</string>
    <string name="invalid_review_request">Invalid request to fetch reviews.</string>
    <string name="failed_review_request">Failed to fetch reviews. Try again later.</string>
    <string name="log_out">Successfully logged out!</string>
    <string name="fetch_feed_again">No reviews available. Swipe up to try again.</string>

    <!--Verify Account-->
    <string name="verify_account">Verify Account</string>
    <string name="please_verify_not_clicked">Verify your account (click here)</string>
    <string name="please_verify_clicked">Please enter your 4 digit confirmation PIN</string>
    <string name="pin_here">4 digit PIN here</string>
    <string name="verify">Verify</string>
    <string name="later">Later</string>
    <string name="already_verified">Account already verified!</string>

    <!-- Login Activity -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_number">This number is too short</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="confirm_registry">Username/email not found. Create new userRespBundle?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="login_loading">Logging in...</string>
    <string name="register_loading">Registering...</string>
    <string name="register_now">Don\'t have an account? Register now!</string>
    <string name="sign_in">Already have an account? Sign in!</string>
    <string name="register">Register</string>
    <string name="login_failed">Failed to login. Please check your information and makes sure it\'s correct.</string>
    <string name="unable_to_login">Unable to login. Please try again later.</string>
    <string name="no_account">Don\'t have an account?\u0020</string>
    <string name="sign_up_now">Sign up now!</string>

    <!-- Onboarding -->
    <string name="password_digits">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789!@#$%&amp;</string>
    <string name="enter_info">To begin, enter in your phone number and a password</string>
    <string name="phone_number">Phone number</string>
    <string name="password_hint">Password (min. 8 chars)</string>
    <string name="onboard_loading">Just one moment...</string>
    <string name="done">Done</string>
    <string name="enter_school">Now, enter in your school\'s name</string>
    <string name="creating_account">Creating account...</string>
    <string name="account_exists">Account already exists. Please try a different number.</string>
    <string name="server_issue">Server unable to process request. Please try again later.</string>
    <!-- Verify -->
    <string name="please_verify">Please enter the 4 digit confirmation PIN that has been texted to your number</string>
    <string name="pin_hint">Confirmation PIN</string>
    <string name="pin_too_short">Entered PIN too short</string>
    <string name="invalid_pin">Invalid PIN. Please try again.</string>

    <!-- Main Activity -->
    <string name="data_loaded">Data loaded!</string>

    <!--Prof Search Activity -->
    <string name="get_prof_summary">Get Professor Summary</string>
    <string name="enter_prof_name">Enter in a professor\'s name</string>
    <string name="PROFESSOR_NAME">PROFESSOR_NAME</string>
    <string name="PROFESSOR_ID">PROFESSOR_ID</string>
    <string name="prof_dne">Professor does not exist</string>
    <string name="profs_dne">Professors do not exist</string>
    <string name="no_prof_entered">Please enter in a professor name.</string>
    <string name="prof_summary_button">Get Professor Summary</string>

    <!--Search Activity-->
    <string name="no_results">No matching results found.</string>

    <!--Search Results Activity-->
    <string name="REVIEW_ID">REVIEW_ID</string>
    <string name="REVIEW_RATING">REVIEW_RATING</string>
    <string name="not_logged_in">Please sign in</string>

    <!--Settings Activity-->
    <string name="change_school">Change School</string>
    <string name="logout_button">Logout</string>
    <string name="updating_account">Updating account...</string>
    <string name="enter_school_name">School name</string>
    <string name="school_name_changed">School name changed!</string>
    <string name="school_dne">School does not exist</string>
    <string name="schools_dne">Schools do not exist</string>
    <string name="school_empty">Please enter in a school</string>
    <string name="same_school_error">This is already your current school!</string>
    <string name="error_retrieving_data">Error retrieving data</string>
    <string name="account_update_success">Success!</string>
    <string name="change_password">Change Password</string>
    <string name="please_sign_in">Please sign in</string>
    <string name="change_school_blurb">Please enter a school name</string>
    <string name="change_password_blurb">Please enter your current password and your new password</string>
    <string name="old_password_error">Does not match current password</string>
    <string name="invalid_user_data">Unable to update account. Please re-check entered information.</string>
    <string name="update_failed">Failed to update data. Please try again later.</string>

    <!--Read Review Activity-->
    <string name="students_like"> students like this review</string>
    <string name="students_dislike"> students dislike this review</string>
    <string name="you_like"> you like this review</string>
    <string name="you_dislike"> you dislike this review</string>
    <string formatted="false" name="share_template">
        Check out this review for %s taught by %s for %s; I think you\'ll like it!\n\n%s
    </string>
    <string name="liked">Liked!</string>
    <string name="disliked">Disliked!</string>
    <string name="REVIEW_CONTENT">REVIEW_CONTENT</string>
    <string name="REVIEW_CLASS_NAME">REVIEW_CLASS_NAME</string>
    <string name="REVIEW_DATE">REVIEW_DATE</string>
    <string name="REVIEW_USER_RATING">REVIEW_USER_RATING</string>
    <string name="INVALID_REVIEW_RATING_REQ">Invalid request made.</string>
    <string name="FAILED_REVIEW_RATING">Failed to rate a review. Please try again later.</string>

    <!--Write Review Activity-->
    <string name="submit_review">Submit a Review</string>
    <string name="review_not_long_enough">Review too short.</string>
    <string name="failed_to_submit_review">Failed to submit review. Please try again later.</string>
    <string name="invalid_prof_class_name">Please select valid professor and class name.</string>
    <string name="already_submitted_review">You have already reviewed this class and professor!</string>
    <string name="select_valid_class">Class name does not exist.</string>
    <string name="invalid_rating">Select rating for professor</string>
    <string name="prof_or_class_DNE">Error: submitting review for class and/or professor that does not exist.</string>

    <!--Prof Summary Activity-->
    <string name="search_professor_results_classes">Classes Taught:</string>
    <string name="search_professor_results_schools">Associated Schools</string>
    <string name="search_professor_results_review">See Reviews</string>
    <string name="review_total">out of %d reviews</string>

    <!--My Reviews-->
    <string name="my_reviews">My Reviews</string>

    <!--Admob-->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
</resources>
