<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:style="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:id="@+id/activity_verify"
    tools:context="teamawesome.cs180frontend.Activities.Onboarding.VerifyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            style="@style/WhiteTextTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:gravity="center_horizontal"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:text="@string/please_verify"
            android:id="@+id/onboard_verify_text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:visibility="invisible"
                android:textColorHint="@color/colorWhite"
                android:id="@+id/onboard_verify_TIL">

                <EditText
                    style="@style/WhiteTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pin_hint"
                    android:inputType="phone"
                    android:maxLength="4"
                    android:maxLines="1"
                    android:id="@+id/onboarding_pin"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end"
            android:visibility="invisible"
            android:id="@+id/verify_button_layout">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:background="@color/colorAccent"
                android:textColor="@color/colorWhite"
                android:text="@string/verify"
                android:id="@+id/onboard_verify"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:textColor="@color/colorWhite"
                android:text="@string/later"
                android:id="@+id/onboard_later"/>

        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
