<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_setting_elem"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="teamawesome.cs180frontend.Activities.Settings.SettingElemActivity">

    <LinearLayout
        android:id="@+id/setting_elem1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin"
        android:visibility="gone">

        <TextView
            android:id="@+id/settings_school_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/enter_school_blurb" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/change_school_TIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/settings_university_ac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_school_name"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="18sp">
            </AutoCompleteTextView>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/settings_school_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/change_school"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/setting_elem2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin"
        android:visibility="gone">

        <TextView
            android:id="@+id/settings_password_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/change_password_blurb" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/settings_old_password_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/old_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_current_password"
                android:textSize="18sp"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColorHint="@color/colorAccent" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/settings_new_password_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/new_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_new_password"
                android:textSize="18sp"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColorHint="@color/colorAccent" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/settings_password_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/change_password"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/setting_elem3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin"
        android:visibility="gone">

        <TextView
            android:id="@+id/verify_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/please_verify_clicked" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/verify_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/verify_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pin_here"
                android:textSize="18sp"
                android:inputType="number"
                android:maxLength="4"
                android:maxLines="1"
                android:textColorHint="@color/colorAccent" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/verify_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/verify"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
